added structure and css

--- a/index.html
+++ b/index.html
@@ -14,7 +14,104 @@
 
 <body >
         <div class="root-container">
-
+         <img class="icon" src="./assets/icon.png"/>
+         <div class="section_1">
+            <div class="decription_text background1">
+               <div class="details">
+                  <h2  style="opacity: 1;" class="sub-title">Orange No2</h2>
+                  <a href="#" class="link-block w-inline-block">
+                     <h1 class="text-ani"><span style="opacity: 1; transform: matrix(1, 0, 0, 1, 0, 0);">A</span><span
+                           style="opacity: 1; transform: matrix(1, 0, 0, 1, 0, 0);"> </span><span
+                           style="opacity: 1; transform: matrix(1, 0, 0, 1, 0, 0);">g</span><span
+                           style="opacity: 1; transform: matrix(1, 0, 0, 1, 0, 0);">e</span><span
+                           style="opacity: 1; transform: matrix(1, 0, 0, 1, 0, 0);">n</span><span
+                           style="opacity: 1; transform: matrix(1, 0, 0, 1, 0, 0);">t</span><span
+                           style="opacity: 1; transform: matrix(1, 0, 0, 1, 0, 0);">l</span><span
+                           style="opacity: 1; transform: matrix(1, 0, 0, 1, 0, 0);">e</span><span
+                           style="opacity: 1; transform: matrix(1, 0, 0, 1, 0, 0);"> </span><span
+                           style="opacity: 1; transform: matrix(1, 0, 0, 1, 0, 0);">b</span><span
+                           style="opacity: 1; transform: matrix(1, 0, 0, 1, 0, 0);">l</span><span
+                           style="opacity: 1; transform: matrix(1, 0, 0, 1, 0, 0);">e</span><span
+                           style="opacity: 1; transform: matrix(1, 0, 0, 1, 0, 0);">n</span><span
+                           style="opacity: 1; transform: matrix(1, 0, 0, 1, 0, 0);">d</span><span
+                           style="opacity: 1; transform: matrix(1, 0, 0, 1, 0, 0);"> </span><span
+                           style="opacity: 1; transform: matrix(1, 0, 0, 1, 0, 0);">o</span><span
+                           style="opacity: 1; transform: matrix(1, 0, 0, 1, 0, 0);">f</span><span
+                           style="opacity: 1; transform: matrix(1, 0, 0, 1, 0, 0);"> </span><br><span
+                           style="opacity: 1; transform: matrix(1, 0, 0, 1, 0, 0);">f</span><span
+                           style="opacity: 1; transform: matrix(1, 0, 0, 1, 0, 0);">r</span><span
+                           style="opacity: 1; transform: matrix(1, 0, 0, 1, 0, 0);">e</span><span
+                           style="opacity: 1; transform: matrix(1, 0, 0, 1, 0, 0);">s</span><span
+                           style="opacity: 1; transform: matrix(1, 0, 0, 1, 0, 0);">h</span><span
+                           style="opacity: 1; transform: matrix(1, 0, 0, 1, 0, 0);"> </span><span
+                           style="opacity: 1; transform: matrix(1, 0, 0, 1, 0, 0);">o</span><span
+                           style="opacity: 1; transform: matrix(1, 0, 0, 1, 0, 0);">r</span><span
+                           style="opacity: 1; transform: matrix(1, 0, 0, 1, 0, 0);">a</span><span
+                           style="opacity: 1; transform: matrix(1, 0, 0, 1, 0, 0);">n</span><span
+                           style="opacity: 1; transform: matrix(1, 0, 0, 1, 0, 0);">g</span><span
+                           style="opacity: 1; transform: matrix(1, 0, 0, 1, 0, 0);">e</span><span
+                           style="opacity: 1; transform: matrix(1, 0, 0, 1, 0, 0);"> </span><span
+                           style="opacity: 1; transform: matrix(1, 0, 0, 1, 0, 0);">a</span><span
+                           style="opacity: 1; transform: matrix(1, 0, 0, 1, 0, 0);"> </span><span
+                           style="opacity: 1; transform: matrix(1, 0, 0, 1, 0, 0);">w</span><span
+                           style="opacity: 1; transform: matrix(1, 0, 0, 1, 0, 0);">h</span><span
+                           style="opacity: 1; transform: matrix(1, 0, 0, 1, 0, 0);">o</span><span
+                           style="opacity: 1; transform: matrix(1, 0, 0, 1, 0, 0);">l</span><span
+                           style="opacity: 1; transform: matrix(1, 0, 0, 1, 0, 0);">e</span><span
+                           style="opacity: 1; transform: matrix(1, 0, 0, 1, 0, 0);"> </span><span
+                           style="opacity: 1; transform: matrix(1, 0, 0, 1, 0, 0);">m</span><span
+                           style="opacity: 1; transform: matrix(1, 0, 0, 1, 0, 0);">a</span><span
+                           style="opacity: 1; transform: matrix(1, 0, 0, 1, 0, 0);">l</span><span
+                           style="opacity: 1; transform: matrix(1, 0, 0, 1, 0, 0);">t</span><span
+                           style="opacity: 1; transform: matrix(1, 0, 0, 1, 0, 0);"> </span><span
+                           style="opacity: 1; transform: matrix(1, 0, 0, 1, 0, 0);">c</span><span
+                           style="opacity: 1; transform: matrix(1, 0, 0, 1, 0, 0);">r</span><span
+                           style="opacity: 1; transform: matrix(1, 0, 0, 1, 0, 0);">i</span><span
+                           style="opacity: 1; transform: matrix(1, 0, 0, 1, 0, 0);">s</span><span
+                           style="opacity: 1; transform: matrix(1, 0, 0, 1, 0, 0);">p</span><span
+                           style="opacity: 1; transform: matrix(1, 0, 0, 1, 0, 0);"> </span><span
+                           style="opacity: 1; transform: matrix(1, 0, 0, 1, 0, 0);">l</span><span
+                           style="opacity: 1; transform: matrix(1, 0, 0, 1, 0, 0);">a</span><span
+                           style="opacity: 1; transform: matrix(1, 0, 0, 1, 0, 0);">g</span><span
+                           style="opacity: 1; transform: matrix(1, 0, 0, 1, 0, 0);">e</span><span
+                           style="opacity: 1; transform: matrix(1, 0, 0, 1, 0, 0);">r</span></h1>
+                           <img
+                        src="./assets/arroew.png" 
+                        width="20"
+                         class="arrow">
+                  </a>
+               </div>
+            </div>
+            <div class="decription_image image2">
+               <span class="image_text">No2</span>
+               <img class="image_front" src="./assets/lemonfornt.png" />
+               <img class="image_back" src="./assets/lemonback.png" />
+            </div>
+            <div class="decription_text background2">
+               <div class="details">
+               <h2 style="opacity: 1;" class="sub-title">Lemon No2</h2>
+               <img src="./assets/arroew.png" width="20" class="arrow" />
+               </div>
+            </div>
+         </div>
+         <div class="section_2">
+            <div class="decription_image image1">
+               <span class="image_text">No2</span>
+               <img class="image_front"  src="./assets/orange font.png"/>
+               <img class="image_back" src="./assets/orangeback.png" />
+            </div>
+            <div class="decription_text background3">
+               <div class="details">
+                  <h2 style="opacity: 1;" class="sub-title">Lime No2</h2>
+                  <img src="./assets/arroew.png" width="20" class="arrow" />
+               </div>
+            </div>
+            <div class="decription_image image3">
+               <span class="image_text">No2</span>
+               <img class="image_front" src="./assets/gyvavfont.png" />
+               <img class="image_back" src="./assets/guvavaback.png" />
+            </div>
+         </div>
         </div>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/gsap.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/CSSRulePlugin.min.js"></script>
