--- a/index.html
+++ b/index.html
@@ -19,67 +19,66 @@
             <div class="decription_text background1">
                <div class="details">
                   <h2  style="opacity: 1;" class="sub-title">Orange No2</h2>
-                  <a href="#" class="link-block w-inline-block">
-                     <h1 class="text-ani"><span style="opacity: 1; transform: matrix(1, 0, 0, 1, 0, 0);">A</span><span
-                           style="opacity: 1; transform: matrix(1, 0, 0, 1, 0, 0);"> </span><span
-                           style="opacity: 1; transform: matrix(1, 0, 0, 1, 0, 0);">g</span><span
-                           style="opacity: 1; transform: matrix(1, 0, 0, 1, 0, 0);">e</span><span
-                           style="opacity: 1; transform: matrix(1, 0, 0, 1, 0, 0);">n</span><span
-                           style="opacity: 1; transform: matrix(1, 0, 0, 1, 0, 0);">t</span><span
-                           style="opacity: 1; transform: matrix(1, 0, 0, 1, 0, 0);">l</span><span
-                           style="opacity: 1; transform: matrix(1, 0, 0, 1, 0, 0);">e</span><span
-                           style="opacity: 1; transform: matrix(1, 0, 0, 1, 0, 0);"> </span><span
-                           style="opacity: 1; transform: matrix(1, 0, 0, 1, 0, 0);">b</span><span
-                           style="opacity: 1; transform: matrix(1, 0, 0, 1, 0, 0);">l</span><span
-                           style="opacity: 1; transform: matrix(1, 0, 0, 1, 0, 0);">e</span><span
-                           style="opacity: 1; transform: matrix(1, 0, 0, 1, 0, 0);">n</span><span
-                           style="opacity: 1; transform: matrix(1, 0, 0, 1, 0, 0);">d</span><span
-                           style="opacity: 1; transform: matrix(1, 0, 0, 1, 0, 0);"> </span><span
-                           style="opacity: 1; transform: matrix(1, 0, 0, 1, 0, 0);">o</span><span
-                           style="opacity: 1; transform: matrix(1, 0, 0, 1, 0, 0);">f</span><span
-                           style="opacity: 1; transform: matrix(1, 0, 0, 1, 0, 0);"> </span><br><span
-                           style="opacity: 1; transform: matrix(1, 0, 0, 1, 0, 0);">f</span><span
-                           style="opacity: 1; transform: matrix(1, 0, 0, 1, 0, 0);">r</span><span
-                           style="opacity: 1; transform: matrix(1, 0, 0, 1, 0, 0);">e</span><span
-                           style="opacity: 1; transform: matrix(1, 0, 0, 1, 0, 0);">s</span><span
-                           style="opacity: 1; transform: matrix(1, 0, 0, 1, 0, 0);">h</span><span
-                           style="opacity: 1; transform: matrix(1, 0, 0, 1, 0, 0);"> </span><span
-                           style="opacity: 1; transform: matrix(1, 0, 0, 1, 0, 0);">o</span><span
-                           style="opacity: 1; transform: matrix(1, 0, 0, 1, 0, 0);">r</span><span
-                           style="opacity: 1; transform: matrix(1, 0, 0, 1, 0, 0);">a</span><span
-                           style="opacity: 1; transform: matrix(1, 0, 0, 1, 0, 0);">n</span><span
-                           style="opacity: 1; transform: matrix(1, 0, 0, 1, 0, 0);">g</span><span
-                           style="opacity: 1; transform: matrix(1, 0, 0, 1, 0, 0);">e</span><span
-                           style="opacity: 1; transform: matrix(1, 0, 0, 1, 0, 0);"> </span><span
-                           style="opacity: 1; transform: matrix(1, 0, 0, 1, 0, 0);">a</span><span
-                           style="opacity: 1; transform: matrix(1, 0, 0, 1, 0, 0);"> </span><span
-                           style="opacity: 1; transform: matrix(1, 0, 0, 1, 0, 0);">w</span><span
-                           style="opacity: 1; transform: matrix(1, 0, 0, 1, 0, 0);">h</span><span
-                           style="opacity: 1; transform: matrix(1, 0, 0, 1, 0, 0);">o</span><span
-                           style="opacity: 1; transform: matrix(1, 0, 0, 1, 0, 0);">l</span><span
-                           style="opacity: 1; transform: matrix(1, 0, 0, 1, 0, 0);">e</span><span
-                           style="opacity: 1; transform: matrix(1, 0, 0, 1, 0, 0);"> </span><span
-                           style="opacity: 1; transform: matrix(1, 0, 0, 1, 0, 0);">m</span><span
-                           style="opacity: 1; transform: matrix(1, 0, 0, 1, 0, 0);">a</span><span
-                           style="opacity: 1; transform: matrix(1, 0, 0, 1, 0, 0);">l</span><span
-                           style="opacity: 1; transform: matrix(1, 0, 0, 1, 0, 0);">t</span><span
-                           style="opacity: 1; transform: matrix(1, 0, 0, 1, 0, 0);"> </span><span
-                           style="opacity: 1; transform: matrix(1, 0, 0, 1, 0, 0);">c</span><span
-                           style="opacity: 1; transform: matrix(1, 0, 0, 1, 0, 0);">r</span><span
-                           style="opacity: 1; transform: matrix(1, 0, 0, 1, 0, 0);">i</span><span
-                           style="opacity: 1; transform: matrix(1, 0, 0, 1, 0, 0);">s</span><span
-                           style="opacity: 1; transform: matrix(1, 0, 0, 1, 0, 0);">p</span><span
-                           style="opacity: 1; transform: matrix(1, 0, 0, 1, 0, 0);"> </span><span
-                           style="opacity: 1; transform: matrix(1, 0, 0, 1, 0, 0);">l</span><span
-                           style="opacity: 1; transform: matrix(1, 0, 0, 1, 0, 0);">a</span><span
-                           style="opacity: 1; transform: matrix(1, 0, 0, 1, 0, 0);">g</span><span
-                           style="opacity: 1; transform: matrix(1, 0, 0, 1, 0, 0);">e</span><span
-                           style="opacity: 1; transform: matrix(1, 0, 0, 1, 0, 0);">r</span></h1>
-                           <img
-                        src="./assets/arroew.png" 
-                        width="20"
-                         class="arrow">
-                  </a>
+                   <a href="#" class="link-block w-inline-block">
+
+                      <h1 class="text-ani"><span>A</span>&nbsp;<span 
+                        > </span><span 
+                        >g</span><span 
+                        >e</span><span 
+                        >n</span><span 
+                        >t</span><span 
+                        >l</span><span 
+                        >e</span><span 
+                        > </span><span 
+                        >b</span><span 
+                        >l</span><span 
+                        >e</span><span 
+                        >n</span><span 
+                        >d</span><span 
+                        >&nbsp; </span><span 
+                        >o</span><span 
+                        >f</span><span 
+                        >&nbsp; </span><br><span 
+                        >f</span><span 
+                        >r</span><span 
+                        >e</span><span 
+                        >s</span><span 
+                        >h</span><span 
+                        >&nbsp; </span><span 
+                        >o</span><span 
+                        >r</span><span 
+                        >a</span><span 
+                        >n</span><span 
+                        >g</span><span 
+                        >e</span><span 
+                        >&nbsp; </span><span 
+                        >a</span><span 
+                        >&nbsp; </span><span 
+                        >w</span><span 
+                        >h</span><span 
+                        >o</span><span 
+                        >l</span><span 
+                        >e</span><span 
+                        >&nbsp; </span><span 
+                        >m</span><span 
+                        >a</span><span 
+                        >l</span><span 
+                        >t</span><span 
+                        >&nbsp; </span><span 
+                        >c</span><span 
+                        >r</span><span 
+                        >i</span><span 
+                        >s</span><span 
+                        >p</span><span 
+                        >&nbsp; </span><span 
+                        >l</span><span 
+                        >a</span><span 
+                        >g</span><span 
+                        >e</span><span 
+                        >r</span></h1>
+                      <img  src="./assets/arroew.png"  width="20"  class="arrow">
+                      </a>
+
                </div>
             </div>
             <div class="decription_image image2">
@@ -90,26 +89,49 @@
             <div class="decription_text background2">
                <div class="details">
                <h2 style="opacity: 1;" class="sub-title">Lemon No2</h2>
+               <h1 class="text-ani2"><span>A</span>&nbsp;<span>
+                  </span><span>g</span><span>e</span><span>n</span><span>t</span><span>l</span><span>e</span><span>
+                  </span><span>b</span><span>l</span><span>e</span><span>n</span><span>d</span><span>&nbsp;
+                  </span><span>o</span><span>f</span><span>&nbsp;
+                  </span><br><span>f</span><span>r</span><span>e</span><span>s</span><span>h</span><span>&nbsp;
+                  </span><span>o</span><span>r</span><span>a</span><span>n</span><span>g</span><span>e</span><span>&nbsp;
+                  </span><span>a</span><span>&nbsp;
+                  </span><span>w</span><span>h</span><span>o</span><span>l</span><span>e</span><span>&nbsp;
+                  </span><span>m</span><span>a</span><span>l</span><span>t</span><span>&nbsp;
+                  </span><span>c</span><span>r</span><span>i</span><span>s</span><span>p</span><span>&nbsp;
+                  </span><span>l</span><span>a</span><span>g</span><span>e</span><span>r</span></h1>
                <img src="./assets/arroew.png" width="20" class="arrow" />
                </div>
             </div>
          </div>
          <div class="section_2">
-            <div class="decription_image image1">
-               <span class="image_text">No2</span>
-               <img class="image_front"  src="./assets/orange font.png"/>
-               <img class="image_back" src="./assets/orangeback.png" />
-            </div>
+         <div class="decription_image image3">
+            <span class="image_text">No2</span>
+            <img class="image_front" src="./assets/gyvavfont.png" />
+            <img class="image_back" src="./assets/guvavaback.png" />
+         </div>
             <div class="decription_text background3">
                <div class="details">
                   <h2 style="opacity: 1;" class="sub-title">Lime No2</h2>
+                  <h1 class="text-ani2"><span>A</span>&nbsp;<span>
+                     </span><span>g</span><span>e</span><span>n</span><span>t</span><span>l</span><span>e</span><span>
+                     </span><span>b</span><span>l</span><span>e</span><span>n</span><span>d</span><span>&nbsp;
+                     </span><span>o</span><span>f</span><span>&nbsp;
+                     </span><br><span>f</span><span>r</span><span>e</span><span>s</span><span>h</span><span>&nbsp;
+                     </span><span>o</span><span>r</span><span>a</span><span>n</span><span>g</span><span>e</span><span>&nbsp;
+                     </span><span>a</span><span>&nbsp;
+                     </span><span>w</span><span>h</span><span>o</span><span>l</span><span>e</span><span>&nbsp;
+                     </span><span>m</span><span>a</span><span>l</span><span>t</span><span>&nbsp;
+                     </span><span>c</span><span>r</span><span>i</span><span>s</span><span>p</span><span>&nbsp;
+                     </span><span>l</span><span>a</span><span>g</span><span>e</span><span>r</span></h1>
                   <img src="./assets/arroew.png" width="20" class="arrow" />
                </div>
             </div>
-            <div class="decription_image image3">
+            
+            <div class="decription_image image1">
                <span class="image_text">No2</span>
-               <img class="image_front" src="./assets/gyvavfont.png" />
-               <img class="image_back" src="./assets/guvavaback.png" />
+               <img class="image_front" src="./assets/orange font.png" />
+               <img class="image_back" src="./assets/orangeback.png" />
             </div>
          </div>
         </div>
