--- a/index.html
+++ b/index.html
@@ -6,15 +6,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@100;200&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link
+   href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+   rel="stylesheet">
     <title>Document</title>
 </head>
 
 <body >
         <div class="root-container">
          <img class="icon" src="./assets/icon.png"/>
+         <div class="menu-btn-5" onclick="menuBtnFunction(this)">
+            <span></span>
+            <span></span>
+         </div>
          <div class="section_1">
             <div class="decription_text background1">
                <div class="details">
@@ -83,8 +89,8 @@
             </div>
             <div class="decription_image image2">
                <span class="image_text">No2</span>
-               <img class="image_front" src="./assets/lemonfornt.png" />
-               <img class="image_back" src="./assets/lemonback.png" />
+               <img class="image_front " src="./assets/lemonfornt.png" />
+               <img class="image_back " src="./assets/lemonback.png" />
             </div>
             <div class="decription_text background2">
                <div class="details">
@@ -130,8 +136,8 @@
             
             <div class="decription_image image1">
                <span class="image_text">No2</span>
-               <img class="image_front" src="./assets/orange font.png" />
-               <img class="image_back" src="./assets/orangeback.png" />
+               <img class="image_front orangeF" src="./assets/orange font.png" />
+               <img class="image_back orangeB" src="./assets/orangeback.png" />
             </div>
          </div>
         </div>
