--- a/index.html
+++ b/index.html
@@ -18,9 +18,29 @@
 <body >
         <div class="root-container">
          <img class="icon" src="./assets/icon.png"/>
-         <div class="menu-btn-5" onclick="menuBtnFunction(this)">
+         <div class="menu-btn-5" >
             <span></span>
             <span></span>
+         </div>
+         <div class="menu">
+            <div class="menu-child">
+               <div   class="menu-grand-child">
+                  <div class="menu-col hide"><img
+                        src="./assets/blackincon.png"
+                        width="72" alt="" class="image">
+                     <div class="c-info">Design Direction02 <br>Design Street<br>London <br>‍<br>hello@designdirection.com<br></div>
+                  </div>
+                  <div class="menu-col">
+                     <ul class="w-list-unstyled">
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">About</a></li>
+                        <li><a href="#">Shop</a></li>
+                        <li><a href="#">Blog</a></li>
+                        <li><a href="#">Contact</a></li>
+                     </ul>
+                  </div>
+               </div>
+            </div>
          </div>
          <div class="section_1">
             <div class="decription_text background1">
