added all animation

--- a/index.html
+++ b/index.html
@@ -110,12 +110,12 @@
             </div>
             <div class="decription_image image2">
                <span class="image_text">No2</span>
-               <img class="image_front " src="./assets/lemonfornt.png" />
-               <img class="image_back " src="./assets/lemonback.png" />
+               <img class="image_front lemonf " src="./assets/lemonfornt.png" />
+               <img class="image_back lemonb " src="./assets/lemonback.png" />
             </div>
             <div class="decription_text background2">
                <div class="details">
-               <h2 style="opacity: 1;" class="sub-title">Lemon No2</h2>
+               <h2 style="opacity: 1;" class="sub-title">Lime No2</h2>
                <h1 class="text-ani2"><span>A</span>&nbsp;<span>
                   </span><span>g</span><span>e</span><span>n</span><span>t</span><span>l</span><span>e</span><span>
                   </span><span>b</span><span>l</span><span>e</span><span>n</span><span>d</span><span>&nbsp;
@@ -134,12 +134,12 @@
          <div class="section_2">
          <div class="decription_image image3">
             <span class="image_text">No2</span>
-            <img class="image_front" src="./assets/gyvavfont.png" />
-            <img class="image_back" src="./assets/guvavaback.png" />
+            <img class="image_front limef" src="./assets/gyvavfont.png" />
+            <img class="image_back limeb" src="./assets/guvavaback.png" />
          </div>
             <div class="decription_text background3">
                <div class="details">
-                  <h2 style="opacity: 1;" class="sub-title">Lime No2</h2>
+                  <h2 style="opacity: 1;" class="sub-title">Lemon No2</h2>
                   <h1 class="text-ani2"><span>A</span>&nbsp;<span>
                      </span><span>g</span><span>e</span><span>n</span><span>t</span><span>l</span><span>e</span><span>
                      </span><span>b</span><span>l</span><span>e</span><span>n</span><span>d</span><span>&nbsp;
