added eager in image

--- a/index.html
+++ b/index.html
@@ -111,8 +111,8 @@
             </div>
             <div class="decription_image image2">
                <span class="image_text">No2</span>
-               <img class="image_front lemonf " src="./assets/lemonfornt.png" />
-               <img class="image_back lemonb " src="./assets/lemonback.png" />
+               <img class="image_front lemonf " src="./assets/lemonfornt.png" loading="eager" />
+               <img class="image_back lemonb " src="./assets/lemonback.png"  loading="eager"/>
             </div>
             <div class="decription_text background2">
                <div class="details">
@@ -135,8 +135,8 @@
          <div class="section_2">
          <div class="decription_image image3">
             <span class="image_text">No2</span>
-            <img class="image_front limef" src="./assets/gyvavfont.png" />
-            <img class="image_back limeb" src="./assets/guvavaback.png" />
+            <img class="image_front limef" src="./assets/gyvavfont.png" loading="eager" />
+            <img class="image_back limeb" src="./assets/guvavaback.png"  loading="eager"/>
          </div>
             <div class="decription_text background3">
                <div class="details">
@@ -158,8 +158,8 @@
             
             <div class="decription_image image1">
                <span class="image_text">No2</span>
-               <img class="image_front orangeF" src="./assets/orange font.png" />
-               <img class="image_back orangeB" src="./assets/orangeback.png" />
+               <img class="image_front orangeF" src="./assets/orange font.png" loading="eager" />
+               <img class="image_back orangeB" src="./assets/orangeback.png" loading="eager" />
             </div>
          </div>
         </div>
